# TestAgent

./: .gitignore  CLAUDE.md  DEPENDENCIES.md  FEATURE_IDEAS.md  README.md  TODO.md  after_01.md  jest.config.js  package-lock.json  package.json  playwright.config.js  pyproject.toml  requirements.txt  take-screenshots.js  test-setup.sh
.cline-agent/data/: globalState.json  secrets.json
.cline-vision/data/: globalState.json
.github/: CONFIG.md  agent_config.yml  apt-packages.txt  configure-ralph
.github/diagrams/: ralph_agent_flow.md
.github/scripts/: README.md  playwright-screenshot.sh  pre-process-issue.sh  ralph.sh  ralph_agent.py  self_review.py  visual-check.js
.github/workflows/: ralph-autofix.yml  ralph-dispatch.yml  ralph.yaml  test.yml
backend/: package-lock.json  package.json  server.js
backend/__tests__/: alert-api.test.js  alert-component.test.js  auth.test.js  userRegistration.test.js  users.test.js
clanker/: pyproject.toml
clanker/src/clanker/: __init__.py  clanker_agent.py  ralph_agent.py  self_review.py
clanker/src/clanker/lib/: agent_config.py  env_settings.py  git_ops.py  issue_parser.py  logging_config.py  project_runner.py  prompt_utils.py  screenshot.py  utils.py
clanker/src/clanker/prompts/: heal_prompt.md  screenshot_after_prompt.md
frontend/: alert.js  app.js  index.html  styles.css
github/scripts/: ralph.sh
ralph/: ralph_agent.py  self_review.py
ralph/cline-config/: cline_mcp_settings.json
ralph/lib/: agent_config.py  cline_runner.py  git_ops.py  screenshot.py
ralph/prompts/: escalate_prompt.md  review_fix_prompt.md
screenshots/: visual_verdict.txt
test-results/dark-mode-Dark-Mode-Featur-191b3--preference-in-localStorage/: error-context.md
tests/: test_agent_config.py  test_cline_runner.py  test_git_ops.py  test_issue_parser.py  test_logging_config.py  test_screenshot.py  test_self_review.py  test_utils.py
tests/e2e/: alert-component.spec.js  alert.spec.js  dark-mode.spec.js  debug.spec.js  (+3 more)
(+67 files in other folders)
