[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "clanker-agent"
version = "0.1.0"
description = "Autonomous GitHub issue resolution agent using Cline CLI"
requires-python = ">=3.12"
dependencies = [
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "clanker",
]

[project.scripts]
clanker-agent  = "clanker.ralph_agent:main"
clanker-review = "clanker.self_review:main"

[tool.hatch.build.targets.wheel]
packages = ["clanker"]

[tool.hatch.build.targets.wheel.shared-data]
"clanker/prompts"      = "clanker/prompts"
"clanker/cline-config" = "clanker/cline-config"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
]

[tool.uv.sources]
clanker = { workspace = true }

[tool.uv.workspace]
members = [
    "clanker",
]
