[project]
name = "clanker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Jakob Lindner", email = "lindnerjakob0@gmail.com" }
]
requires-python = ">=3.14"
dependencies = []

[project.scripts]
clanker = "clanker:main"

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"
